# IoT

./: .gitmodules  IoT-points-schedule.xlsx  README.md
Sem1/PoPro/: CMakeLists.txt  KC1_Jan_Czechowski.c  decToBin.c  k2_jczechow.c  lab2.c  laczenieJednaFunkcja.c  simple2.c  testowanie.c  wyk4_gra.c  zaliczeniePoPro.c  zamianaLiczb.c
Sem1/PoPro/LAB10/: veccalc.c  veccommon.h  vecin.c  vecin.h  vecout.h  vectors.c
Sem1/PoPro/LAB4/: zadanie3_liczbaWyst.c
Sem1/PoPro/LAB5/: zad1_ImplementoiwanieWlasnychFunkcji.c  zad3_pierwiastki.c
Sem1/PoPro/LAB6/: zad2.c
Sem1/PoPro/LAB8/: zad1.c
Sem1/PoPro/LAB9/: zad2.c  zapisywanie.c
Sem1/PoPro/LAB9/output/: baza_danych.txt  sqrt.txt
Sem1/PoPro/PROJEKT_GRAFY/: 1.txt  2.txt  TestWszystkiego.txt  graf.c  graf.h  graf_test.txt  main.c  plik.txt  pliki.c  pliki.h  test1.txt  test3.txt  test4.txt  test5.txt  testowe.txt  testowy.txt
Sem1/PoPro/Projekt/: main.c  nauka.c  pliki.c  pliki.h
Sem1/PoPro/Projekt/.codegpt/: head
Sem1/PoPro/VS/001/: 001.cpp  001.sln
Sem1/PoPro/VS/001/Project1/: 002.c
Sem1/PoPro/VS/001/Project1/Project1/x64/Debug/: Project1.exe.recipe
Sem1/PoPro/VS/001/Project1/Project1/x64/Debug/Project1.tlog/: Cl.items.tlog  Project1.lastbuildstate  link.secondary.1.tlog
Sem1/PoPro/VS/Project2/: Project2.sln
Sem1/PoPro/VS/Project2/Project2/: Project2.vcxproj
Sem1/PoPro/ZALICZENIE_2_cwiczenia/: 3.c  Untitled-1.c  osoby3.txt  prosteAlokowanie.c  przykladoweZaliczenie.c  przykladoweZaliczenie_2.c  tempCodeRunnerFile.c  zad_1.c  zapisywanieDoPliku.c
Sem1/PoPro/ZALICZENIE_2_cwiczenia/output/: dane.txt
(+114 files in other folders)
